fixed footer spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -165,7 +165,7 @@ section {
     background-color: var(--body-pink);
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .connect, .hours {
